--- a/CV3.html
+++ b/CV3.html
@@ -302,7 +302,7 @@ div.tocify {
 <div id="book" class="section level3">
 <h3>Book</h3>
 <ul>
-<li><code>Applied Machine Learning for Social Scientists and Policy Analysts with R</code>. Forthcoming in July 2020 at <a href="https://bookdown.org">Bookdown</a>. It will be online and free. I will accept donations for pdf and downloadable versions.</li>
+<li><code>Applied Machine Learning for Social Scientists and Policy Analysts with R</code>. Forthcoming in July 2021 at <a href="https://bookdown.org">Bookdown</a>. It will be online and free. I will accept donations for pdf and downloadable versions.</li>
 </ul>
 </div>
 <div id="refereed-publications" class="section level3">
@@ -310,8 +310,7 @@ div.tocify {
 <div id="google-scholar" class="section level4">
 <h4><a href="https://scholar.google.ca/citations?user=8M2YA1QAAAAJ&amp;hl=en">Google Scholar</a></h4>
 <ul>
-<li>Assortative Preferences in Choice of Major. <em>IZA Journal of Labor Economics</em>. October 2020: 9:1.<br />
-</li>
+<li>Assortative Preferences in Choice of Major. <em>IZA Journal of Labor Economics</em>. October 2020: 9:1.</li>
 <li>Asymmetric Information and Discount to Foreign-Acquired Education in Canada (with Atul Dar). <em>IZA Journal of Development and Migration</em>. 2019, 10:2.</li>
 <li>Immigration and Location Choices of Native-Born Workers in Canada. <em>Papers in Regional Science</em>. Vol.96(S1) March 2017. 96-S1.</li>
 <li>Is the Lower Return to Immigrants’ Foreign Schooling a Postarrival Problem in Canada? (with A. Dar). <em>IZA Journal of Migration</em>. 2017. 6:4.</li>
@@ -333,8 +332,7 @@ div.tocify {
 <div id="papers-under-review" class="section level3">
 <h3>Papers Under Review</h3>
 <ul>
-<li>Why does education-specific skill mismatch have no effect on wages in Turkish labor markets. <em>Applied Economics</em>. <strong>R&amp;R</strong> (With B.Orbay and N.Erkol).<br />
-</li>
+<li>Why does education-specific skill mismatch have no effect on wages in Turkish labor markets. <em>Applied Economics</em>. <strong>R&amp;R</strong> (With B.Orbay and N.Erkol).</li>
 <li>Son preference, Sex-Selective Abortions, and Birth-Spacing in Canada. <em>Population Studies</em> (With MC. Robitaille).</li>
 </ul>
 </div>
@@ -342,8 +340,7 @@ div.tocify {
 <h3>Work-in-progress</h3>
 <ul>
 <li>Efficacy of Mobility Restrictions in Toronto and Montreal</li>
-<li>Son Preferring Fertility Behaviors in Turkey (With MC. Robitaille).<br />
-</li>
+<li>Son Preferring Fertility Behaviors in Turkey (With MC. Robitaille).</li>
 <li>Predicting Respiratory Diseases by Social Media Extraction and Machine Learning (with MLportal).</li>
 <li>Predicting Cancer by Using CCHS (with MLportal) – SSHRC/RDC application is accepted.</li>
 <li>Predicting immigrants’ hospital utilization based on the record of landing and tax data for pre-migration policies (Mutlu Yuksel, Mevlude Akbulut, Casey Warman).</li>
